fixed and improved pref highlight: works like &highlight=id1+id2+... ids are modulename (the visible ones) or modulename.moduleoptionname
eg http://www96.hattrick.org/MyHattrick/?configure_foxtrick=true&category=matches&highlight=FlipSidesInMatchOrders+MatchPlayerColouring.Home

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@2689 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences-dialog-html.css
+++ b/content/resources/css/preferences-dialog-html.css
@@ -34,6 +34,9 @@ margin-bottom:10px;
 	background-color:#7F80FF !important;
 }
 
+.ft_pref_highlight:hover {
+	background-color:#7F80FF !important; // didn't have a better idea
+}
 #foxtrick_prefsave { display:inline;  margin-left:10px;}
 
 #foxtrick_prefcancel {display:inline;  margin-left:10px;}
